@@ -1,3 +1,14 @@
+*** 20000516_2 by lusky
+reworked vsendto_one() again (pa)
+another fix to the llist fix (db)
+
+
+*** 20000516_1 by lusky
+revved patchlevel to b126
+missing va_start/end in send.c (db)
+additional llist logging (db)
+
+
 *** 20000514_1 by lusky
 workaround in client.c for major bug causing llist corruption and server coring
 vsendto_one cleanup in send.c
